; ModuleID = '/home/carl/AnghaBench/lab/engine/code/game/extr_g_team.c_Team_ReturnFlag.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/game/extr_g_team.c_Team_ReturnFlag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TEAM_FREE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"The flag has returned!\0A\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"The %s flag has returned!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Team_ReturnFlag(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @Team_ResetFlag(i32 %3)
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @Team_ReturnFlagSound(i32 %4, i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @TEAM_FREE, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 (i32*, i8*, ...) @PrintMsg(i32* null, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  br label %16

12:                                               ; preds = %1
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @TeamName(i32 %13)
  %15 = call i32 (i32*, i8*, ...) @PrintMsg(i32* null, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  br label %16

16:                                               ; preds = %12, %10
  ret void
}

declare dso_local i32 @Team_ReturnFlagSound(i32, i32) #1

declare dso_local i32 @Team_ResetFlag(i32) #1

declare dso_local i32 @PrintMsg(i32*, i8*, ...) #1

declare dso_local i32 @TeamName(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
